--- a/l/lw/lwn/lwn.net.html
+++ b/l/lw/lwn/lwn.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lwn.net privacy policy that was archived on 2005-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051211201932id_/http%3A//lwn.net/op/Privacy.lwn) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lwn.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615000902id_/http%3A//lwn.net/op/Privacy.lwn) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><title>LWN: LWN.net Privacy Statement</title>
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -7,7 +7,7 @@
         <link rel="alternate" type="application/rss+xml" title="LWN Headlines" href="/headlines/newrss">
         <style type="text/css">
 <!--
-/* $Id: lwn.css,v 1.49 2005/11/07 18:48:10 corbet Exp $ */
+/* $Id: lwn.css,v 1.53 2006/05/15 20:03:07 corbet Exp $ */
 body {
         color: black;
         background-color: #ffffff;
@@ -73,6 +73,9 @@ TABLE.CommentBody { width: 100%; padding: 3px;
 TD.CommentBody { vertical-align: top; text-align: left;
 		 background-color: #ffffff }
 
+div.CommentReplyButton { display: none; 
+			 text-align: right }
+
 H1.C1HL { background-color: #ffcc99; text-align: center }
 DIV.C1HL { background-color: #ffcc99; font-size: x-large;
 	   text-align: center }
@@ -123,32 +126,37 @@ P.IndexSecondary { margin-top: 0px; text-indent: 5mm; margin-bottom: 0px; }
 P.IndexEntry { text-indent: 1cm; margin-top: 0px; margin-bottom: 0px }
 
 /* Text ad formatting. */
-TABLE.TA1 { background-color: #000000; border-width: 0; width: 140;
-	    padding: 1 }
+TABLE.TA1 { background-color: #000000; border-width: 0; width: 140px;
+	    padding: 1px }
 TABLE.TA2 { background-color: #e6e6e6; width: 100%; border-width: 0;
-	    padding: 2}
+	    padding: 2px}
 TABLE.TA3 { background-color: #fefefe; width: 100%; border-width: 0;
-	    padding: 7 }
+	    padding: 7px }
 
 TD.TA { background-color: #419d4a; color: #ffffff }
 TD.TATEXT { vertical-align: top; text-align: left; background-color: white}
 
+/* Timeline stuff. */
 
-TABLE.tlrw { width: 45%; align: right; background-color: #eeeedd;
+TABLE.tlnav { width: 100%; color: black; padding: 2px }
+
+TABLE.tlrw { width: 45%; float: right; background-color: #eeeedd;
 		 border-style: groove; margin: 5px; float: right }
-TABLE.tlr { width: 35%; align: right; background-color: #eeeedd;
+TABLE.tlr { width: 35%; float: right; background-color: #eeeedd;
 		 border-style: groove; margin: 5px; float: right }
-TABLE.tllw { width: 45%; align: right; background-color: #eeeedd;
+TABLE.tllw { width: 45%; float: right; background-color: #eeeedd;
 		 border-style: groove; margin: 5px; float: left }
-TABLE.tll { width: 35%; align: right; background-color: #eeeedd;
+TABLE.tll { width: 35%; float: right; background-color: #eeeedd;
 		 border-style: groove; margin: 5px; float: left }
 P.QuoteAttr { text-align: right }
 
 P.GuestAuthor { text-align: left; font-size: smaller; margin-top: 0px}
-TABLE.Byline { width: 35%; align: right; background-color: #eeeedd;
+TABLE.Byline { width: 35%; float: right; background-color: #eeeedd;
 		 border-style: groove; margin: 5px; float: right }
 
-}
+
+div.survey { margin-left: 1cm }
+div.sv_mc { margin-left: 10mm; margin-top: 0cm }
 
 -->
 </style>
@@ -162,41 +170,19 @@ TABLE.Byline { width: 35%; align: right; background-color: #eeeedd;
         <a href="/"><img src="/images/lcorner.png" width="153" height="120" border="0" alt="LWN.net Logo"></a>
         </center>
         <br>&nbsp;<br>
-        <center>
-<table bgcolor="#000000" border="0" width="155" cellpadding="0" cellspacing="1">
-  <tbody><tr><td>
-      <table width="100%" cellspacing="1" border="0" cellpadding="2" bgcolor="#e6e6e6">
-      <tbody><tr><td bgcolor="#419d4a">
-          <center><b> <font color="#ffffff">Sponsored Link</font></b></center>
-      </td></tr>
-      </tbody></table>
-      <table width="100%" cellspacing="1" border="0" cellpadding="2" bgcolor="#fefefe">
-      <tbody><tr>
-          <td valign="TOP" align="LEFT" class="subject" bgcolor="#FFFFFF">
-              <font size="-1">
-              <a href="http://lwn.net/TextAds/395/click">ClarkConnect Linux Small Business Server</a>
-              </font><p><font size="-1">
-              "The best small business Linux server you've never heard of."  June 2005
-
-              </font> 
-          </p></td></tr>
-      </tbody></table>
-  </td></tr>
-</tbody></table>
-</center>
-<p>
+        <p>
 <b>You are not logged in</b><br>
 <a href="/login">Log in now</a><br>
                                  <a href="/newaccount">Create an account</a><br>
                                  <a href="/subscribe/">Subscribe to LWN</a>
 <br>&nbsp;<br><b>Recent Features</b>
-</p><p class="Feature"><a href="http://lwn.net/Articles/162274/">LWN.net Weekly Edition for December 8, 2005</a></p>
-            	<p class="Feature"><a href="http://lwn.net/Articles/163038/">A look at the Patent Commons Project and OIN</a></p>
-            	<p class="Feature"><a href="http://lwn.net/Articles/161233/">LWN.net Weekly Edition for December 1, 2005</a></p>
-            	<p class="Feature"><a href="http://lwn.net/Articles/160704/">The Grumpy Editor's guide to music managers</a></p>
-            	<p class="Feature"><a href="http://lwn.net/Articles/160498/">LWN.net Weekly Edition for November 23, 2005</a></p>
+</p><p class="Feature"><a href="http://lwn.net/Articles/187691/">Google Earth for Linux</a></p>
+            	<p class="Feature"><a href="http://lwn.net/Articles/185934/">Live CDs Part II: Desktop Replacements</a></p>
+            	<p class="Feature"><a href="http://lwn.net/Articles/186972/">Interview: Harald Welte (part 1)</a></p>
+            	<p class="Feature"><a href="http://lwn.net/Articles/185901/">LWN.net Weekly Edition for June 8, 2006</a></p>
+            	<p class="Feature"><a href="http://lwn.net/Articles/185075/">LWN.net Weekly Edition for June 1, 2006</a></p>
             	<p>
-<a href="/op/Privacy.lwn?format=printable">Printable page</a>
+<a href="/op/Privacy.lwn?format=printable" rel="nofollow">Printable page</a>
 
 <br>&nbsp;<br></p></td><td width="10">&nbsp;</td>
 <td width="100%" valign="top">
@@ -237,7 +223,21 @@ TABLE.Byline { width: 35%; align: right; background-color: #eeeedd;
 
         </td></tr></tbody></table>
         <p>
-        </p><table width="100%" cellspacing="1" cellpadding="0" border="0">
+        <!-- LWN.net Google adcode $Id: google-adcode,v 1.1 2003/06/20 20:28:25 corbet Exp $ -->
+</p><center>
+<script language="JavaScript">
+<!--
+google_ad_client = 'pub-4358676377058562';
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = '468x60_as';
+// -->
+</script>
+<script language="JavaScript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</center>
+<p>
+</p><table width="100%" cellspacing="1" cellpadding="0" border="0">
 
         <tbody><tr><td class="Middle" valign="top" align="center" bgcolor="#ffffff">
         <h1>LWN.net Privacy Statement</h1>
@@ -338,7 +338,7 @@ is needed to securely manage your sessions on the site.
         <p>
         </p><center>
         <font size="-2">
-        Copyright © 2005, Eklektix, Inc.<br>
+        Copyright © 2006, Eklektix, Inc.<br>
         Comments and public postings are copyrighted by their creators.<br>
         Linux  is a registered trademark of Linus Torvalds<br>
         Powered by <a href="http://www.rackspace.com/index.php?CMP=BAC-2GH696668493">Rackspace Managed Hosting</a>.
