--- a/v/vi/vit/vitalchek.com.html
+++ b/v/vi/vit/vitalchek.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vitalchek.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213194718id_/http%3A//www.vitalchek.com/_privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vitalchek.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615000922id_/http%3A//www.vitalchek.com/_privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>VitalChek's Privacy Policy</title>
@@ -49,11 +49,11 @@ gVersion="1.5";
 <script language="javascript">
 function ShowPartners()
 {
-	window.open('ShowPartners.asp','','width=650,height=375,screenX=150,screenY=200,left=150,top=200,resizable,menubar,scrollbars,status,toolbar,location');
+	window.open('http://www.vitalchek.com/ShowPartners.asp','','width=650,height=375,screenX=150,screenY=200,left=150,top=200,resizable,menubar,scrollbars,status,toolbar,location');
 }
 function ShowUPSStore()
 {
-	window.open('UPSStore.asp','','width=750,height=550,screenX=150,screenY=200,left=150,top=200,resizable,scrollbars');
+	window.open('http://www.vitalchek.com/UPSStore.asp','','width=750,height=550,screenX=150,screenY=200,left=150,top=200,resizable,scrollbars');
 }
 function ClosePassport()
 {
@@ -102,7 +102,7 @@ function NumberOver(sz,vl,kx,h,v)
 	<tr>
 		<td valign="top" align="center" height="2">
 			<font face="Verdana,Arial,sans-serif" size="1">
-				December 13, 2005
+				June 14, 2006
 			</font>
 			<br>
 			&nbsp;
@@ -114,16 +114,21 @@ function NumberOver(sz,vl,kx,h,v)
                       <tbody>
                         <tr>
 						  <td width="15">&nbsp;</td>
-                          <td align="center"><a href="http://vitalchek-solutions.custhelp.com" class="hred14n" target="weather"><b><u>See Frequently Asked Questions</u></b></a></td>
+                          <td align="center"><span class="hblu12n"><b>Frequently<br>Asked<br>Questions<br><a href="http://vitalchek-solutions.custhelp.com" style="font-size: 12; color: red" target="weather"><b><u>Click Here</u></b></a></b></span></td>
                         </tr>
                         <tr><td colspan="2">&nbsp;</td></tr>
                         <tr>
 						  <td width="15">&nbsp;</td>
-                          <td align="center"><span class="hred14n"><b>Breaking News- Louisiana Vital Records has reopened.</b></span><b><br><a href="http://www.vitalchek.com/provider_overview.asp?provider_id=90218&amp;Louisiana_Birth_Certificate" class="hred14n"><b>Order Now</b></a></b></td>
+                          <td align="center"><span class="hblu12n"><b>Para<br><a href="http://vitalchek-solutions.custhelp.com/cgi-bin/vitalchek_solutions.cfg/php/enduser/std_adp.php?p_faqid=1292&amp;p_created=1126876342&amp;p_sid=HIo17kUh&amp;p_lva=&amp;p_sp=cF9zcmNoPTEmcF9zb3J0X2J5PSZwX2dyaWRzb3J0PSZwX3Jvd19jbnQ9MSZwX3NlYXJjaF90eXBlPXNlYXJjaF9ubCZwX3Byb2RfbHZsMT0zJnBfcGFnZT0xJnBfc2VhcmNoX3RleHQ9c3BhbmlzaA**&amp;p_li=" style="font-size: 12; color: red" target="weather"><b><u>Español</u></b></a></b></span></td>
+                        </tr>
+                        <tr><td colspan="2">&nbsp;</td></tr>
+                        <tr>
+						  <td width="15">&nbsp;</td>
+                          <td align="center"><span class="hblu12n"><b>Visit our<br>Payment Services<br>site for remote <a href="http://www.vitalchek.com/Campaign?site=3&amp;clickid=775745508261953538" style="font-size: 12; color: red"><b>payment solutions</b></a><br>for government<br>agencies.</b></span></td>
                         </tr>
                         <tr>
 						  <td width="15">&nbsp;</td>
-                          <td align="center"><p>&nbsp;</p><a href="weather.asp" class="hbla12n" target="weather"><b>View possible<br>delivery delays<br>due to weather.</b></a></td>
+                          <td align="center"><span class="hblu12n"><p>&nbsp;</p><b>View possible<br>delivery<br>delays due to<br>weather<br><a href="weather.asp" style="font-size: 12; color: red" target="weather"><b>Click Here</b></a></b></span></td>
                         </tr>
                       </tbody>
                     </table>
@@ -185,9 +190,10 @@ function NumberOver(sz,vl,kx,h,v)
 				<!--a class="hlbl11n" href="http://vitalchek-solutions.custhelp.com">FAQs</a><br-->
 				<a class="hlbl11n" href="http://www.vitalchek.com/privacy.asp">Site Security</a><br>
 				<a class="hlbl11n" href="http://www.vitalchek.com/_privacy.asp">Privacy Policy</a><br>
+				<a class="hlbl11n" href="http://www.privacyatchoicepoint.com" target="_blank">Privacy at ChoicePoint</a><br>
 				<a class="hlbl11n" href="http://www.choicetrust.com/pdfs/id_theft_kit.pdf" target="idt">Protect Your Identity</a>
 				<a class="hlbl11n" href="http://www.vitalchek.com/about_vitalchek.asp">About VitalChek</a><br>
-				<a class="hlbl11n" href="http://vitalchek-solutions.custhelp.com">Contact VitalChek</a><br>
+				<a class="hlbl11n" href="http://vitalchek-solutions.custhelp.com">Frequently Asked Questions</a><br>
 				<a class="hlbl11n" href="http://www.vitalchek.com/Site-map.htm">Site Map</a><br>
 		</td>
 	</tr>
@@ -206,6 +212,11 @@ function NumberOver(sz,vl,kx,h,v)
 <p></p>
     <table border="0" cellpadding="6" cellspacing="2" width="140" id="Table4">
       <tbody> 
+      <tr>
+		<td align="center">
+			<img src="https://sealserver.trustkeeper.net/compliance/seal.php?code=w6onNprNfdHKLcVTgYfZ1Nc3X2IC2k" border="0" style="cursor:hand" onclick="javascript:window.open('https://sealserver.trustkeeper.net/compliance/cert.php?code=w6onNprNfdHKLcVTgYfZ1Nc3X2IC2k', 'hATW', 'location=no, toolbar=no, resizable=no, scrollbars=yes, directories=no, status=no, width=520, height=335'); return false;" oncontextmenu="alert('Copying Prohibited by Law - Trusted Commerce is a Service Mark of TrustWave Holdings, Inc.');return false" alt="Trusted Commerce">
+		</td>
+      </tr>
       <tr> 
       <!--<td align="center"><img src="/media/verisign_logo.gif" alt = "Internet Security provided by Verisign"></td>-->
       <td align="center"><img src="/media/ecs_seal.gif" alt="Internet Security provided by Entrust"></td>
@@ -241,7 +252,7 @@ function NumberOver(sz,vl,kx,h,v)
 			<table width="600" id="Table2">
 				<tbody><tr>
 					<td valign="top"> 
-      <p align="left" class="pageheader">VitalChek's Privacy Policy <font size="2">(effective 09/01/2002)</font></p>
+      <p align="left" class="pageheader">VitalChek's Privacy Policy <font size="2">(effective 04/25/2006)</font></p>
       <p align="left">
       <font face="Arial,Verdana" size="2" color="#000099"><b>VitalChek Assigns Top Priority to Your Right to Privacy</b></font><br>
 <span class="bodytext">Your privacy is important to us. By participating in the Council of Better Business Bureau's BBB<i>OnLine</i><font size="1"><sup>®</sup></font> Privacy Program we have made a commitment to meet the programs' strict requirements regarding how we treat your information and have it verified by BBB<i>OnLine</i>.  Further information about this program is available at <a href="http://www.bbbonline.org">http://www.bbbonline.org</a>.
@@ -249,7 +260,7 @@ function NumberOver(sz,vl,kx,h,v)
 This privacy notice will appear on our home page and on  pages that prompt you for data used to process your application for certified copies of Birth, Death, Marriage &amp; Divorce Certificates.  We maintain strict entitlement procedures through government agencies affiliated with our network to verify the identity and entitlement rights of applicants to the requested certificates.<br>&nbsp;
 </span></p><p></p>
 <font face="Arial,Verdana" size="2" color="#000099"><b>We Collect Only the Information Necessary to Process Your Order</b></font><br> 
-This notice applies to all information collected or submitted on the vitalchek.com website and enetwizard.com shopping cart/website.  Our privacy policy does apply or cover the following websites: vitalcheknetwork.com, vcninc.com, permitwizard.com, transcriptwizard.com, vitalvision.com, or paymentwizard.com. 
+This notice applies to all information collected or submitted on the vitalchek.com website and enetwizard.com shopping cart/website.  Our privacy policy does apply or cover the following websites: vitalchek.com, permitwizard.com, paymentchek.com, enetwizard.com, officialtraveldocuments.com.
 <p>
 <font face="Arial,Verdana" size="2" color="#000099"><b>Types of Information Collected:</b></font><br>
 We collect your name, address, phone number, email address, billing information including credit card number and expiration date as well as prospect information such as an alternate address for shipping.  We only use your name, address, billing information/credit card information to process your order.  The email address is used only  for confirming your order request or answering your inquiries  Under no circumstances will we use this information for anything else not described in this privacy notice.  A detailed listing appears below.
@@ -298,22 +309,22 @@ We use the information to:
 To prevent unauthorized access, maintain data accuracy, and ensure the appropriate use of information, we have put into place appropriate physical, electronic and management procedures. These procedures safeguard and secure the information we collect online and include the latest in encryption technology and firewall protection.  The Entrust symbol on our website identifies the type of security software protection we employ to safeguard the privacy of all information transmitted to and from our site.
 <p></p>
 <font face="Arial,Verdana" size="2" color="#000099"><b>Cookies</b></font><br>
-"Cookies" are small pieces of information that are stored by your browser on your computer's hard drive.  This site uses third party cookies, however personally identifiable information is not collected through the use of cookies.  Cookies are used to determine whether a visitor is unique or whether the visitor has viewed our site before.  Vitalchek Network, Inc. requires the use of cookies during the payment process.  While most browsers are set to accept cookies by default, your browser may offer settings to alert you before accepting them.  Your browser manufacturer has information on changing the default setting for your specific browser.
+Our purchase process uses cookies.  Cookies are small pieces of information that are submitted by us to your computer.  This information allows us to recognize you as a customer, along with your account information.  Very simply, this useful tool keeps you, our customer, from having to retype information that you've already entered.  Cookies are not used to access information entered on the secure server, nor affect your online security in any way.  The cookie we place on your system is session-specific; therefore when you sign off of your account, it is deleted.
 <p></p>
 <font face="Arial,Verdana" size="2" color="#000099"><b>Nonpersonally-identifiable Information</b></font><br>
 This site also collects nonpersonally-identifiable information.  For example, as you browse this Web site we may collect information about your visit, but not about you personally.  Via web server logs, for example, we may monitor statistics such as: the number of people that visit our site, which page(s) are visited on our site, from which domain our visitors com (e.g., aol.com, hotmail.com, etc.), and which browsers people use to visit our site (e.g., Netscape Navigator, Microsoft Internet Explorer, etc.).  Our Web site uses an outsourcing program, WebTrends On-Demand, to assist us in analyzing this data to better tailor our Web site.
 <p></p>
-<font face="Arial,Verdana" size="2" color="#000099"><b>Our Commitment To Children's Privacy</b></font><br>
+<!--<font face="Arial,Verdana" size="2" color="#000099"><b>Our Commitment To Children's Privacy</b></font><br>
 Protecting the privacy of the very young is especially important. For this reason, we collect only information about children's date of birth and full name, and we only accept this information from the parents, grandparents or legal guardians of the child. Only persons over 18 can apply for a certified vital record, so anyone under 18 must apply through their parents or legal guardians.
-<p></p>
+<p></p>-->
 <font face="Arial,Verdana" size="2" color="#000099"><b>How You Can Access Or Correct Your Information</b></font><br>
 You can access to review or correct your account information by clicking the appropriate link on our site under Customer Service and choosing one of the following options: Sign onto your account, Create a new account, or Update your account.
 <p></p>
 <font face="Arial,Verdana" size="2" color="#000099"><b>Our Affiliations and Memberships That Strengthen Our Right To Public Trust</b></font><br>
-VitalChek is a member of good standing with, and sits on the Corporate Board of Directors for the National Association For Public Health Statistics and Information Systems (NAPHSIS).  We also enjoy active membership in the International Association of Credit Card Investigators (IACCI).  We continue to employ the services of several former State Registrars, who provide invaluable assistance in our efforts to promote and protect the public trust.
+VitalChek is a member of good standing with, and sits on the Corporate Board of Directors for the National Association For Public Health Statistics and Information Systems (NAPHSIS).  We continue to employ the services of several former State Registrars, who provide invaluable assistance in our efforts to promote and protect the public trust.
 <p></p>
 <font face="Arial,Verdana" size="2" color="#000099"><b>Policy Changes</b></font><br>
-We may revise this online privacy policy from time to time. If we make any material changes, we will notify you by posting a prominent announcement on the web site. If we are going to use your personally identifiable information in a manner different from that stated at the time of collection we will notify you via email. You will have a choice as to whether or not we use your information in this different manner. In addition, if we make any material changes in our privacy practices that do not affect user information already stored in our database, we will post a prominent notice on our web site notifying users of the change. In some cases where we post the notice we will also email users, who have opted to receive communications from us, notifying them of the changes in our privacy practices.
+We may revise this online privacy policy from time to time. If we make any material changes, we will notify you by posting a prominent announcement on the web site. If we are going to use your personally identifiable information in a manner different from that stated at the time of collection we will notify you via email. You will have a choice as to whether or not we use your information in this different manner. In addition, if we make any material changes in our privacy practices that do not affect user information already stored in our database, we will post a prominent notice on our web site notifying users of the change.
 <p></p>
 <font face="Arial,Verdana" size="2" color="#000099"><b>How To Contact Us</b></font><br>
 If you would like to know more about the integrity and scope of our privacy policies, or if you have any question regarding procedures, please visit us at <a href="http://vitalchek-solutions.custhelp.com">vitalchek-solutions.custhelp.com</a>.
@@ -341,7 +352,7 @@ window.name = 'opener';
 									<td colspan="4">
 										<hr>
 										<div class="footnote" align="center">
-											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>© 2005 ChoicePoint Asset Company</b> (25)
+											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>© 2006 ChoicePoint Asset Company</b> (26)
 										</div>
 									</td>
 								</tr>
