--- a/m/mo/mof/mofa.go.jp.html
+++ b/m/mo/mof/mofa.go.jp.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the mofa.go.jp privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231175146id_/http%3A//www.mofa.go.jp/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mofa.go.jp privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615001107id_/http%3A//www.mofa.go.jp/about/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head><script src="/__utm.js" type="text/javascript"></script>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css">
 	<title>MOFA: Privacy Policy</title> 
