--- a/o/ox/oxf/oxfam.org.uk.html
+++ b/o/ox/oxf/oxfam.org.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oxfam.org.uk privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228092837id_/http%3A//www.oxfam.org.uk/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oxfam.org.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615001125id_/http%3A//www.oxfam.org.uk/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 		<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -89,21 +89,24 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
                   <td width="140" align="right" valign="middle"> <nobr> 
                     <select name="select" style="WIDTH:175px; COLOR: #333333; FONT-FAMILY: Arial, Helvetica, sans-serif; FONT-SIZE: 12px;" onchange="MM_jumpMenu('parent',this,0)">
                       <option selected="">other Oxfam sites</option>
-                      <option value="http://www.oxfam.org/eng">Oxfam International</option>
-                      <option value="http://www.oxfam.org.uk/generationwhy/index.htm">Generation 
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=50&amp;url=http%3a%2f%2fwww%2Eoxfam%2Eorg%2fen%2findex%2Ehtm">Oxfam 
+                      International</option>
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=51&amp;url=http%3a%2f%2fwww%2Eoxfam%2Eorg%2Euk%2fgenerationwhy%2findex%2Ehtm">Generation 
                       Why</option>
-                      <option value="http://sib1.od2.com/common/framework.aspx?shid=0536002E">Oxfam 
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=52&amp;url=http%3a%2f%2fsib1%2Eod2%2Ecom%2fcommon%2fframework%2Easpx%3fshid%3d0536002E">Oxfam 
                       Music</option>
-                      <option value="http://www.controlarms.org">Control Arms</option>
-                      <option value="http://www.oxfam.org.uk/coolplanet/">Cool 
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=53&amp;url=http%3a%2f%2fwww%2Econtrolarms%2Eorg">Control 
+                      Arms</option>
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=54&amp;url=http%3a%2f%2fwww%2Eoxfam%2Eorg%2Euk%2fcoolplanet%2findex%2Ehtm">Cool 
                       Planet for teachers</option>
-                      <option value="http://www.maketradefair.com">Make Trade 
-                      Fair</option>
-                      <option value="http://publications.oxfam.org.uk/oxfam/default.asp">Oxfam 
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=19&amp;url=http%3a%2f%2fwww%2Emaketradefair%2Ecom">Make 
+                      Trade Fair</option>
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=56&amp;url=http%3a%2f%2fpublications%2Eoxfam%2Eorg%2Euk%2foxfam%2fdefault%2Easp">Oxfam 
                       Publishing</option>
-                      <option value="http://www.oxfamunwrapped.com">Oxfam Unwrapped</option>
-                      <option value="http://www.oxfamgb.org/ukpp/">UK Poverty 
-                      Programme</option>
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=57&amp;url=http%3a%2f%2fwww%2Eoxfamunwrapped%2Ecom">Oxfam 
+                      Unwrapped</option>
+                      <option value="http://oxfam.intelli-direct.com/e/PExit.dll?m=234&amp;p=58&amp;url=http%3a%2f%2fwww%2Eoxfamgb%2Eorg%2fukpp%2findex%2Ehtm">UK 
+                      Poverty Programme</option>
                     </select>
                     </nobr></td>
                   <td width="10" valign="middle"><img src="/images/transparent.gif" class="blockimg" alt="" width="10" height="27" border="0"></td>
@@ -319,7 +322,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 			<td align="left" colspan="12"><img src="images/transparent.gif" class="blockimg" alt="" width="1" height="20" border="0"></td>
 		</tr>
 		</tbody></table>
-<!-- Legal Info Row --><title>footer</title>
+<!-- Legal Info Row -->
 <table summary="footer" border="0" cellspacing="0" cellpadding="0" bgcolor="#FFFFFF" width="748">
   <tbody><tr> 
     <td align="left"><img src="/images/transparent.gif" class="blockimg" alt="" width="18" height="1" border="0"></td>
@@ -338,10 +341,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <tr> 
     <td align="left" colspan="3"><img src="/images/transparent.gif" class="blockimg" alt="" width="1" height="1" border="0"></td>
     <td align="left" colspan="7"><img src="/images/divider_4column.gif" alt="" width="521" height="5" border="0"><br>
-      <p class="blacktext">Oxfam GB is a ltd company, reg in London No 612172, 
-        Oxfam House, John Smith Drive, Oxford OX4 2JY<br>
-        Reg. charity No 202918. Oxfam GB is a member of Oxfam International<br>
-        <a href="http://www.oxfam.org.uk/privacy.htm">Oxfam GB Privacy Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a title="oxweb02" href="http://www.oxfam.org.uk/terms.htm"> 
+      <p class="blacktext">© 2006 Oxfam GB. Oxfam GB is a member of <a href="http://www.oxfam.org" target="_blank">Oxfam 
+        International</a>. <br>
+        Oxfam GB is a ltd company, reg in London No 612172, Oxfam House, John 
+        Smith Drive, Oxford OX4 2JY. Reg. charity No 202918.
+        <br>
+        <a href="http://www.oxfam.org.uk/privacy.htm">Oxfam GB Privacy Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a title="oxweb01" href="http://www.oxfam.org.uk/terms.htm"> 
         Website Terms and Conditions</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/textonly/index.htm">Text 
         Only</a><br>
       </p>
@@ -399,10 +404,10 @@ if(dt.images[iin]){iwri=false; dt.images[iin].src=il+'&0';}}
 if(iwri)dt.write('<i'+'mg sr'+'c="'+il+'&0" width=1 height=1 border=0>');}}
 var idl=window.location.href;var isl="http"+(idl.indexOf('https:')==0?'s':'')+"://oxfam.intelli-direct.com/e/t3.dll?234&";
 itrc();
-//--></script><img name="itr1" height="1" width="1" border="0" src="https://oxfam.intelli-direct.com/e/t3.dll?234&amp;623952255&amp;%20&amp;iAddPAR%20&amp;iREGQry%20&amp;iSale%20&amp;1&amp;800&amp;600&amp;24&amp;2&amp;13&amp;en-US%20&amp;0&amp;https%3A%2F%2Fweb%2Earchive%2Eorg%2Fweb%2F20051228092837id_%2Fhttp%253A%2F%2Fwww%2Eoxfam%2Eorg%2Euk%2Fprivacy%2Ehtm%20&amp;0">
+//--></script><img name="itr1" height="1" width="1" border="0" src="https://oxfam.intelli-direct.com/e/t3.dll?234&amp;1302319758&amp;%20&amp;iAddPAR%20&amp;iREGQry%20&amp;iSale%20&amp;1&amp;800&amp;600&amp;24&amp;2&amp;13&amp;en-US%20&amp;0&amp;https%3A%2F%2Fweb%2Earchive%2Eorg%2Fweb%2F20060615001125id_%2Fhttp%253A%2F%2Fwww%2Eoxfam%2Eorg%2Euk%2Fprivacy%2Ehtm%20&amp;0">
 <script language="JavaScript"><!--
 if(iie>0)dt.write("\<\!--");
-//--></script><title>intellitracker</title><noscript>
+//--></script><noscript>
 <img src='http://oxfam.intelli-direct.com/e/t3.dll?234&0&%20&iAddPAR&iREGQry&iSale&0&0&0&0&0&0&%20&0&%20&0' height=1 width=1 border=0 alt="">
 </noscript><!--//-->
 <!-- End of IntelliTracker Code -->
